--- a/helm_charts/mdcore/templates/deployments-template.yml
+++ b/helm_charts/mdcore/templates/deployments-template.yml
@@ -127,7 +127,7 @@ spec:
         {{ else }}
         - name: {{ $component.name }}
           persistentVolumeClaim:
-            claimName: {{ printf "%s-pvc" $.Values.storage_name }}
+            claimName: {{ printf "%s" $.Values.storage_name }}
         {{ end }}
         {{ end }}
         {{- if $component.extraVolumes }}
