--- a/helm_charts/mdcore/templates/storage-template.yml
+++ b/helm_charts/mdcore/templates/storage-template.yml
@@ -1,102 +1,9 @@
-{{ if $.Values.persistance_enabled }}
+{{ if $.Values.storage_configs }}
 
-## Use dynamic provisioning from minikube if available
-{{ if eq .Values.storage_provisioner "minikube-hostpath" }}
+{{ range $sorage_name, $storage_value := .Values.storage_configs }}
 ---
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata:
-  name: {{ .Values.storage_name }}
-provisioner: k8s.io/minikube-hostpath
-reclaimPolicy: Delete
-volumeBindingMode: Immediate
-{{ end }}
+{{- toYaml $storage_value }}
 
-{{ if eq .Values.storage_provisioner "no-provisioner" }}
----
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata:
-  name: {{ .Values.storage_name }}
-provisioner: kubernetes.io/no-provisioner
-volumeBindingMode: WaitForFirstConsumer
-
-## Create a share PV for all component in MDSS 
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  labels:
-    app: {{ printf "%s-pv" .Values.storage_name }}
-    type: local
-  name: {{ printf "%s-pv" .Values.storage_name }}
-spec:
-  accessModes:
-    - ReadWriteOnce
-  capacity:
-    storage: 10Gi
-  storageClassName: {{ $.Values.storage_name }}
-  persistentVolumeReclaimPolicy: Retain
-  hostPath:
-    path: {{ printf "%s/%s" "/data" .Values.storage_name | quote }}
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - {{ $.Values.storage_node }}
-
-{{ end }}
-
-{{ if eq .Values.storage_provisioner "efs.csi.aws.com" }}
-# ---
-# apiVersion: storage.k8s.io/v1beta1
-# kind: CSIDriver
-# metadata:
-#   name: efs.csi.aws.com
-# spec:
-#   attachRequired: false
----
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata:
-  name: {{ .Values.storage_name }}
-provisioner: efs.csi.aws.com
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: {{ printf "%s-pv" .Values.storage_name }}
-spec:
-  capacity:
-    storage: 100Gi
-  volumeMode: Filesystem
-  accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: {{ .Values.storage_name }}
-  csi:
-    driver: efs.csi.aws.com
-    volumeHandle: {{ .Values.EfsVolumeHandle }}
-
-{{ end }}
-
-{{ if ne .Values.storage_provisioner "hostPath" }}
-## Create a shared PVC for all components
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: {{ printf "%s-pvc" .Values.storage_name }}
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 15Gi
-  storageClassName: {{ .Values.storage_name }}
 {{ end }}
 
 {{ end }}
