--- a/helm_charts/mdcore/templates/deployments-template.yml
+++ b/helm_charts/mdcore/templates/deployments-template.yml
@@ -1,7 +1,7 @@
 # Create a deployment for each component in MD Core if it's enabled
 
 {{ range $component_name, $component := .Values.core_components }}
-{{ if or $.Values.deploy_with_core_db (not $component.is_db)  }}
+{{ if and (or $.Values.deploy_with_core_db (not $component.is_db)) ( or (not $component.module_name) (contains (print $component.module_name) $.Values.ENABLED_MODULES)) }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -64,14 +64,15 @@ spec:
           securityContext:
             {{- toYaml $component.securityContext | nindent 12 }}
           {{- end }}
-          {{- if (or $component.mountConfig $component.tls.enabled $component.persistentDir)}}
+          {{- $tls := default dict $component.tls }}
+          {{- if (or $component.mountConfig $tls.enabled $component.persistentDir $component.extraVolumeMounts)}}
           volumeMounts:
             {{- if $component.mountConfig }}
             - name: {{ $component.mountConfig.configName }}
               mountPath: {{ $component.mountConfig.mountPath }}
               subPath: {{ $component.mountConfig.subPath }}
             {{ end }}
-            {{- if $component.tls.enabled }}
+            {{- if $tls.enabled }}
             - name: {{ $component.tls.certSecret }}
               mountPath: {{ $.Values.MDCORE_CERT_PATH }}/mdcore.crt
               subPath: {{ $component.tls.certSecretSubPath }}
@@ -86,6 +87,9 @@ spec:
               subPath: {{ $component.name }}
               {{- end }}
             {{ end }}
+            {{- if $component.extraVolumeMounts }}
+              {{- toYaml $component.extraVolumeMounts | nindent 12 }}
+            {{- end }}
           {{- end }}
           {{- if $component.resources }}
           resources:
@@ -103,14 +107,14 @@ spec:
       imagePullSecrets:
         {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
       {{- end }}
-      {{- if (or $component.mountConfig $component.tls.enabled $component.persistentDir $component.extraVolumes)}}
+      {{- if (or $component.mountConfig $tls.enabled $component.persistentDir $component.extraVolumes )}}
       volumes:
         {{- if $component.mountConfig }}
         - name: {{ $component.mountConfig.configName }}
           configMap:
             name: {{ $component.mountConfig.configName }}
         {{ end }} 
-        {{- if $component.tls.enabled }}
+        {{- if $tls.enabled }}
         - name: {{ $component.tls.certSecret }}
           secret:
             secretName: {{ $component.tls.certSecret }}
