--- a/helm_charts/mdss/templates/deployments-template.yml
+++ b/helm_charts/mdss/templates/deployments-template.yml
@@ -1,6 +1,8 @@
+
 # Create a deployment for each component in MDSS
 {{ range $component_name, $component := .Values.mdss_components }}
-{{ if or $.Values.deploy_with_mdss_db (not $component.is_db)  }}
+
+{{ if and (or $.Values.deploy_with_mdss_db (not $component.is_db)) ( or (not $component.module_name) (contains (print $component.module_name) (index $.Values "mdss-common-environment").ENABLED_MODULES))  }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -29,7 +31,7 @@ spec:
             {{- toYaml $component.env | nindent 12 }}
           {{- end }}
           {{- if $component.custom_repo }}
-          image: {{ printf "%s/%s:%s" $.Values.mdss_docker_repo $component.image $.Values.BRANCH | quote }}
+          image: {{ printf "%s/%s:%s" $.Values.mdss_docker_repo $component.image (index $.Values "mdss-common-environment").BRANCH | quote }}
           {{- else }}
           image: {{ $component.image | quote }}
           {{- end }}
