--- a/helm_charts/mdss/templates/services-template.yml
+++ b/helm_charts/mdss/templates/services-template.yml
@@ -1,6 +1,7 @@
 # Create a service for each component in MDSS it has exposed ports
 {{ range $component_name, $component := .Values.mdss_components }}
-{{ if $component.ports }}
+{{ if and $component.ports ( or (not $component.module_name) (contains (print $component.module_name) (index $.Values "mdss-common-environment").ENABLED_MODULES)) }}
+
 {{ if and (not $.Values.deploy_with_mdss_db) $component.is_db }}
 
 {{ else }}
