--- a/helm_charts/mdss/values.yaml
+++ b/helm_charts/mdss/values.yaml
@@ -1,51 +1,91 @@
 # Default values for mdss. These will also be included in the environment of each mdss container
 
-MONGO_URL: mongodb://mongodb:27017/MDCS
-MONGO_SSL_ALLOW_INVALID_CERTIFICATES: false
-MONGO_CA_CERTIFICATE: ""
-MONGO_DB: MDCS
-MONGO_MIGRATIONS_HOST: mongomigrations
-MONGO_MIGRATIONS_PORT: 27777
-RABBITMQ_HOST: rabbitmq
-RABBITMQ_PORT: 5672
-APIGATEWAY_PORT: 8005
-APIGATEWAY_PORT_SSL: 8006
-NGINX_TIMEOUT: 300
-BACKUPS_TO_KEEP: 3
-LICENSINGSERVICE_HOST: licensingservice
-LICENSINGSERVICE_URL: http://licensingservice
-LICENSINGSERVICE_PORT: 5000
-SMBSERVICE_URL: http://smbservice
-SMBSERVICE_PORT: 5002
-RABBITMQ_SCANNING_PREFETCH_COUNT: 20
-HTTPS_ACTIVE: no
-BRANCH: stable3.0                                   # Sets a custom MDSS branch for testing/preview versions, this value should be set to stable for production use
-LOG_LEVEL: 4
-APP_LOG_LEVEL: INFORMATION
-SMB_SHORT_DEADLINE: 5
-SMB_LONG_DEADLINE: 30
-POLLY_RETRY_COUNT: 3
-POLLY_LONG_RETRY: 5
-POLLY_SHORT_RETRY: 1
-SMB_UPLOAD_CHUNK: 2
-SMBSERVICE_FOLLOW_SYMLINKS: 0
-DISCOVERY_SERVICE_PERFORMANCE_OPTIMIZATION: 0
-DISCOVERY_SERVICE_DEGREE_OF_PARALLELISM: 10
-DISCOVERY_SERVICE_SMB_RTP_PROCESS_HANDLING: 0
-MD_CORE_CERTIFICATE_VALIDATION: 0
-POLLY_LONG_RETRY_BOX: 2
-POLLY_SHORT_RETRY_BOX: 1
-POLLY_POST_ACTION_RETRY_TIME: 30
-LOAD_BALANCER_MD_CORE_UNAVAILABLE_TIME: 5
-WEBCLIENT_HOST: webclient
-AZURE_BLOBS_PAGE_SIZE: 100
-DISCOVERY_SERVICE_IGNORE_EMPTY_OBJECTS: 0
-SMBSERVICE_DISCOVERY_DEBOUNCE_TIME: 120
-DISCOVERY_SERVICE_REPROCESSING_FAILED_TIME_HOURS: 24
-CACHE_SERVICE_URL: redis
-CACHE_SERVICE_PORT: 6379
-POLLY_RETRY_TIME: 30
-DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE: false
+mdss-common-environment:
+  ENABLED_MODULES: "azureblob,amazonsdk,googlecloud,alibabacloud,azurefiles,box"                                  # Enabled modules by default
+  # ENABLED_MODULES: "azureblob,amazonsdk,googlecloud,alibabacloud,azurefiles,smb,box,onedrive,debug"             # All supported modules
+
+  # This defines the connection string to the db ( should be modified when using an external db)
+  MONGO_URL: "mongodb://mongodb:27017/MDCS"
+
+  # Some managed mongo db services require ignoring certificate errors 
+  MONGO_SSL_ALLOW_INVALID_CERTIFICATES: "false"
+
+  MONGO_CA_CERTIFICATE: ""
+  MONGO_DB: "MDCS"
+  MONGO_MIGRATIONS_HOST: "mongomigrations"
+  MONGO_MIGRATIONS_PORT: "27777"
+
+  RABBITMQ_URI: "amqp://rabbitmq:5672"
+  RABBITMQ_HOST: "rabbitmq"
+  RABBITMQ_PORT: "5672"
+  RABBITMQ_DEFAULT_PASS: guest
+  RABBITMQ_DEFAULT_USER: guest
+
+  APIGATEWAY_PORT: "8005"
+  APIGATEWAY_PORT_SSL: "8006"
+
+  NGINX_TIMEOUT: "300"
+  BACKUPS_TO_KEEP: "3"
+  LICENSINGSERVICE_HOST: "licensingservice"
+  LICENSINGSERVICE_URL: "http://licensingservice"
+  LICENSINGSERVICE_PORT: "5000"
+  SMBSERVICE_URL: "http://smbservice"
+  SMBSERVICE_PORT: "5002"
+
+  # This can be modified in order to define how many messages can be sent to rabbitmq in parallel.
+  RABBITMQ_SCANNING_PREFETCH_COUNT: "20"
+
+  HTTPS_ACTIVE: "no"
+  BRANCH: "stable3.0"                                   # Sets a custom MDSS branch for testing/preview versions, this value should be set to stable or stable3.0 for production use
+  # These variables can be changed to reveal debug information in the application
+  LOG_LEVEL: "4"
+  APP_LOG_LEVEL: "INFORMATION"
+
+  SMB_SHORT_DEADLINE: "5"
+  SMB_LONG_DEADLINE: "30"
+
+  # This can be modified in order to specify the number of retries per operation( e.g: download, upload, scan)
+  POLLY_RETRY_COUNT: "3"
+  # There are two types of retry long and short. Long retry is configured to try every 5 minutes until the POLLY_RETRY_COUNT is reached. This retry is used for web requests.
+  POLLY_LONG_RETRY: "5"
+  # This is the short retry version, configured to retry after 1 minute.
+  POLLY_SHORT_RETRY: "1"
+
+  # This value is used to define the upload chuck for files transferred using SMB , the limit is 7 MB( for azure files the limit is 4MB )
+  SMB_UPLOAD_CHUNK: "2"
+
+  # This value is used by the rtp process to decide whether to process all files on storage or only those added after its start up (0 - for new objects only, 1 - for all objects)
+  DISCOVERY_SERVICE_SMB_RTP_HANDLING: "0"
+
+  # This can be changed to the following values 0 - Default, 1 - IgnoreChainErrors, 2 - IgnoreAllErrors
+  MD_CORE_CERTIFICATE_VALIDATION: "0"
+
+  # This retry value is used only for box operations where the time increases exponentially between retries ( e.g: "the second time it will be 4 minutes instead of two )
+  POLLY_LONG_RETRY_BOX: "2"
+  # This variable has the same mechanism as the POLLY_LONG_RETRY_BOX
+  POLLY_SHORT_RETRY_BOX: "1"
+  # This defines how much time shall pass between remediation retries when encountering failures.
+  POLLY_POST_ACTION_RETRY_TIME: "30"
+
+  LOAD_BALANCER_MD_CORE_UNAVAILABLE_TIME: "5"
+  WEBCLIENT_HOST: "webclient"
+
+  # This variable is used in order to limit the number of blobs we receive from azure per response.
+  AZURE_BLOBS_PAGE_SIZE: "100"
+
+  DISCOVERY_SERVICE_IGNORE_EMPTY_OBJECTS: "0"
+
+  # This variable is used to define how much time should pass until we can discover a file that has failed previously, after 24 hours it shall be discovered again.
+  DISCOVERY_SERVICE_REPROCESSING_FAILED_TIME_HOURS: "24"
+
+  CACHE_SERVICE_URI: "redis:6379"
+  ### Deprecated
+  CACHE_SERVICE_URL: "redis"
+  CACHE_SERVICE_PORT: "6379"
+  ###
+
+  # This retry time is used for other generic operations.
+  POLLY_RETRY_TIME: "30"
 
 
 # Set to true if the respective database engine should also be deployed
@@ -114,9 +154,17 @@ mdss_components:
 
   rabbitmq:
     name: rabbitmq
-    image: rabbitmq:3.8
+    image: rabbitmq:3.11.4-management
     ports:
       - port: 5672
+      - port: 15672
+    mountConfig:
+      configName: rabbitmq-config
+      mountPath: /data/rabbitmq/advanced.config
+      subPath: advanced.config
+    env:
+      - name: RABBITMQ_ADVANCED_CONFIG_FILE
+        value: /data/rabbitmq/advanced.config
     extra_labels:
       aws-type: fargate
   
@@ -137,15 +185,6 @@ mdss_components:
     extra_labels:
       aws-type: fargate
   
-  smbservice:
-    name: smbservice
-    custom_repo: true
-    image: mdcloudservices_smbservice
-    ports:
-      - port: 5002
-    extra_labels:
-      aws-type: fargate
-  
   discoveryservice:
     name: discoveryservice
     custom_repo: true
@@ -155,27 +194,7 @@ mdss_components:
     resources:
       requests:
         memory: "0.5Gi"
-  
-  discoveryamazonsdkservice:
-    name: discoveryamazonsdkservice
-    custom_repo: true
-    image: mdcloudservices_discoveryamazonsdk
-    extra_labels:
-      aws-type: fargate
-    resources:
-      requests:
-        memory: "0.5Gi"
 
-  discoveryazureblobservice:
-    name: discoveryazureblobservice
-    custom_repo: true
-    image: mdcloudservices_discoveryazureblob
-    extra_labels:
-      aws-type: fargate
-    resources:
-      requests:
-        memory: "0.5Gi"
-  
   scanningservice:
     name: scanningservice
     custom_repo: true
@@ -260,13 +279,6 @@ mdss_components:
       requests:
         memory: "0.5Gi"
 
-  terraformservice:
-    name: terraformservice
-    custom_repo: true
-    image: mdcloudservices_terraform
-    extra_labels:
-      aws-type: fargate
-
   remediationsservice:
     name: remediationsservice
     custom_repo: true
@@ -274,36 +286,10 @@ mdss_components:
     extra_labels:
       aws-type: fargate
 
-  remediationsservice-amazonsdk:
-    name: remediationsservice-amazonsdk
-    custom_repo: true
-    image: mdcloudservices_remediationsamazonsdk
-    extra_labels:
-      aws-type: fargate
-
-  remediationsservice-azureblob:
-    name: remediationsservice-azureblob
-    custom_repo: true
-    image: mdcloudservices_remediationsazureblob
-    extra_labels:
-      aws-type: fargate
-
-  remediationsservice-googlecloud:
-    name: remediationsservice-googlecloud
-    custom_repo: true
-    image: mdcloudservices_remediationsgooglecloud
-    extra_labels:
-      aws-type: fargate
-  
-  remediationsservice-alibabacloud:
-    name: remediationsservice-alibabacloud
-    custom_repo: true
-    image: mdcloudservices_remediationsalibabacloud
-    extra_labels:
-      aws-type: fargate
-
+  # ======================================= DEBUG MODULE ================================================
   systemchecks:
     name: systemchecks
+    module_name: debug
     image: mdcloudservices_systemchecks
     custom_repo: true
     ports:
@@ -316,3 +302,166 @@ mdss_components:
     extra_labels:
       aws-type: fargate
 
+  # ======================================= AMAZONSDK MODULE ================================================
+  discoveryamazonsdkservice:
+    name: discoveryamazonsdkservice
+    module_name: amazonsdk
+    custom_repo: true
+    image: mdcloudservices_discoveryamazonsdk
+    extra_labels:
+      aws-type: fargate
+    resources:
+      requests:
+        memory: "0.5Gi"
+
+  remediationsservice-amazonsdk:
+    name: remediationsservice-amazonsdk
+    module_name: amazonsdk
+    custom_repo: true
+    image: mdcloudservices_remediationsamazonsdk
+    extra_labels:
+      aws-type: fargate
+  # ======================================= AZUREBLOB MODULE ================================================
+  discoveryazureblobservice:
+    name: discoveryazureblobservice
+    module_name: azureblob
+    custom_repo: true
+    image: mdcloudservices_discoveryazureblob
+    extra_labels:
+      aws-type: fargate
+    resources:
+      requests:
+        memory: "0.5Gi"
+
+  remediationsservice-azureblob:
+    name: remediationsservice-azureblob
+    module_name: azureblob
+    custom_repo: true
+    image: mdcloudservices_remediationsazureblob
+    extra_labels:
+      aws-type: fargate
+  # ======================================= ALIBABACLOUD MODULE ================================================
+  discoveryalibabacloudservice:
+    name: discoveryalibabacloudservice
+    module_name: alibabacloud
+    custom_repo: true
+    image: mdcloudservices_discoveryalibabacloud
+    extra_labels:
+      aws-type: fargate
+    resources:
+      requests:
+        memory: "0.5Gi"
+  
+  remediationsservice-alibabacloud:
+    name: remediationsservice-alibabacloud
+    module_name: alibabacloud
+    custom_repo: true
+    image: mdcloudservices_remediationsalibabacloud
+    extra_labels:
+      aws-type: fargate
+  # ======================================= GOOGLECLOUD MODULE ================================================
+  discoverygooglecloudservice:
+    name: discoverygooglecloudservice
+    module_name: googlecloud
+    custom_repo: true
+    image: mdcloudservices_discoverygooglecloud
+    extra_labels:
+      aws-type: fargate
+    resources:
+      requests:
+        memory: "0.5Gi"
+  
+  remediationsservice-googlecloud:
+    name: remediationsservice-googlecloud
+    module_name: googlecloud
+    custom_repo: true
+    image: mdcloudservices_remediationsgooglecloud
+    extra_labels:
+      aws-type: fargate
+  # ======================================= BOX MODULE ================================================
+  discoveryboxservice:
+    name: discoveryboxservice
+    module_name: box
+    custom_repo: true
+    image: mdcloudservices_discoverybox
+    extra_labels:
+      aws-type: fargate
+    resources:
+      requests:
+        memory: "0.5Gi"
+  
+  remediationsservice-box:
+    name: remediationsservice-box
+    module_name: box
+    custom_repo: true
+    image: mdcloudservices_remediationsbox
+    extra_labels:
+      aws-type: fargate
+  # ======================================= AZUREFILES MODULE ================================================
+  discoveryazurefilesservice:
+    name: discoveryazurefilesservice
+    module_name: azurefiles
+    custom_repo: true
+    image: mdcloudservices_discoveryazurefiles
+    extra_labels:
+      aws-type: fargate
+    resources:
+      requests:
+        memory: "0.5Gi"
+  
+  remediationsservice-azurefiles:
+    name: remediationsservice-azurefiles
+    module_name: azurefiles
+    custom_repo: true
+    image: mdcloudservices_remediationsazurefiles
+    extra_labels:
+      aws-type: fargate
+  # ======================================= SMB MODULE ================================================
+  discoverysmbservice:
+    name: discoverysmbservice
+    module_name: smb
+    custom_repo: true
+    image: mdcloudservices_discoverysmb
+    extra_labels:
+      aws-type: fargate
+    resources:
+      requests:
+        memory: "0.5Gi"
+  
+  remediationsservice-smb:
+    name: remediationsservice-smb
+    module_name: smb
+    custom_repo: true
+    image: mdcloudservices_remediationssmb
+    extra_labels:
+      aws-type: fargate
+  
+  smbservice:
+    name: smbservice
+    module_name: smb
+    custom_repo: true
+    image: mdcloudservices_smbservice
+    ports:
+      - port: 5002
+    extra_labels:
+      aws-type: fargate
+  # ======================================= ONEDRIVE MODULE ================================================
+  discoveryonedriveservice:
+    name: discoveryonedriveservice
+    module_name: onedrive
+    custom_repo: true
+    image: mdcloudservices_discoveryonedrive
+    extra_labels:
+      aws-type: fargate
+    resources:
+      requests:
+        memory: "0.5Gi"
+  
+  remediationsservice-onedrive:
+    name: remediationsservice-onedrive
+    module_name: onedrive
+    custom_repo: true
+    image: mdcloudservices_remediationsonedrive
+    extra_labels:
+      aws-type: fargate
+  
