--- a/helm_charts/icap/templates/deployments-template.yml
+++ b/helm_charts/icap/templates/deployments-template.yml
@@ -7,7 +7,12 @@
 {{ $importTargets := dict "name" "IMPORT_CONF_FILE_TARGET" "value" (toJson $component.import_configuration.targets) }}
 {{ $ENV = append $component.env $importTargets}}
 {{- end }}
-
+{{ $httpsSslProtocols  := dict "name" "HTTPS_SSL_PROTOCOLS" "value" (toJson $component.tls.https.tlsVersions) }}
+{{ $icapsSslProtocols  := dict "name" "ICAPS_SSL_PROTOCOLS" "value" (toJson $component.tls.icaps.tlsVersions) }}
+{{ $nginxsSslProtocols := dict "name" "NGINXS_SSL_PROTOCOLS" "value" (toJson $component.tls.nginxs.tlsVersions) }}
+{{ $ENV = append $ENV $httpsSslProtocols }}
+{{ $ENV = append $ENV $icapsSslProtocols }}
+{{ $ENV = append $ENV $nginxsSslProtocols }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -48,40 +53,52 @@ spec:
           name: {{ $component.name | quote }}
           {{- if $component.ports }}
           ports:
-          {{- range $component.ports }}
-            - containerPort: {{ .port }}
-          {{- end }}
+            - containerPort: {{ $component.ports.rest }}
+            - containerPort: {{ $component.ports.icap }}
+            - containerPort: {{ $component.ports.icaps }}
+        {{- if $component.nginx_support.enabled }}
+            - containerPort: {{ $component.ports.nginx }}
+            - containerPort: {{ $component.ports.nginxs }}
+        {{- end }}
           {{- end }}
           {{- if $component.livenessProbe}}
           livenessProbe:
             {{- toYaml $component.livenessProbe | nindent 12 }}
           {{- end }}
-          {{- if (or $component.mountConfig $component.tls.enabled $component.import_configuration.enabled $component.nginx_support.tls.enabled $component.persistentDir)}}
+          {{- if (or $component.mountConfig $component.tls.https.enabled $component.import_configuration.enabled $component.tls.icaps.enabled $component.tls.nginxs.enabled $component.persistentDir)}}
           volumeMounts:
             {{- if $component.mountConfig }}
             - name: {{ $component.mountConfig.configName }}
               mountPath: {{ $component.mountConfig.mountPath }}
               subPath: {{ $component.mountConfig.subPath }}
             {{ end }}
-            {{- if $component.tls.enabled }}
-            - name: {{ $component.tls.certSecret }}
-              mountPath: {{ $.Values.MDICAPSRV_CERT_PATH }}/mdicapsrv.crt
-              subPath: {{ $component.tls.certSecretSubPath }}
-            - name: {{ $component.tls.certKeySecret }}
-              mountPath: {{ $.Values.MDICAPSRV_CERT_PATH }}/mdicapsrv.key
-              subPath: {{ $component.tls.certKeySecretSubPath }}
+            {{- if $component.tls.https.enabled }}
+            - name: {{ $component.tls.https.certSecret }}
+              mountPath: {{  $component.tls.https.mountPath }}/mdicapsrv-https.crt
+              subPath: {{ $component.tls.https.certSecretSubPath }}
+            - name: {{ $component.tls.https.certKeySecret }}
+              mountPath: {{ $component.tls.https.mountPath }}/mdicapsrv-https.key
+              subPath: {{ $component.tls.https.certKeySecretSubPath }}
             {{ end }}
-            {{- if $component.nginx_support.tls.enabled }}
-            - name: {{ $component.nginx_support.tls.nginxsCertSecret }}
-              mountPath: {{ $.Values.MDICAPSRV_NGINX_CERT_PATH }}/mdicapsrv-nginxs.crt
-              subPath: {{ $component.nginx_support.tls.nginxCertSecretSubPath }}
-            - name: {{ $component.nginx_support.tls.nginxsKeySecret }}
-              mountPath: {{ $.Values.MDICAPSRV_NGINX_CERT_PATH }}/mdicapsrv-nginxs.key
-              subPath: {{ $component.nginx_support.tls.nginxKeySecretSubPath }}
+            {{- if $component.tls.icaps.enabled }}
+            - name: {{ $component.tls.icaps.certSecret }}
+              mountPath: {{  $component.tls.icaps.mountPath }}/mdicapsrv-icaps.crt
+              subPath: {{ $component.tls.icaps.certSecretSubPath }}
+            - name: {{ $component.tls.icaps.certKeySecret }}
+              mountPath: {{ $component.tls.icaps.mountPath }}/mdicapsrv-icaps.key
+              subPath: {{ $component.tls.icaps.certKeySecretSubPath }}
+            {{ end }}
+            {{- if $component.tls.nginxs.enabled }}
+            - name: {{ $component.tls.nginxs.certSecret }}
+              mountPath: {{ $component.tls.nginxs.mountPath }}/mdicapsrv-nginxs.crt
+              subPath: {{ $component.tls.nginxs.certSecretSubPath }}
+            - name: {{ $component.tls.nginxs.certKeySecret }}
+              mountPath: {{ $component.tls.nginxs.mountPath }}/mdicapsrv-nginxs.key
+              subPath: {{ $component.tls.nginxs.certKeySecretSubPath }}
             {{ end }}
             {{- if $component.import_configuration.enabled }}
             - name: {{ $component.import_configuration.importConfigMap }}
-              mountPath: {{ $.Values.MDICAPSRV_IMPORT_CONF_FILE }}
+              mountPath: {{ printf "%s/%s" $component.import_configuration.importConfigPath  $component.import_configuration.importConfigMapSubPath }}
               subPath: {{ $component.import_configuration.importConfigMapSubPath }}
             {{ end }}
             {{- if $component.persistentDir }}
@@ -108,33 +125,41 @@ spec:
       imagePullSecrets:
         {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
       {{- end }}
-      {{- if (or $component.mountConfig $component.tls.enabled $component.import_configuration.enabled $component.nginx_support.tls.enabled $component.persistentDir)}}
+      {{- if (or $component.mountConfig $component.tls.https.enabled $component.tls.icaps.enabled $component.tls.nginxs.enabled $component.import_configuration.enabled $component.persistentDir)}}
       volumes:
         {{- if $component.mountConfig }}
         - name: {{ $component.mountConfig.configName }}
           configMap:
             name: {{ $component.mountConfig.configName }}
         {{ end }} 
-        {{- if $component.tls.enabled }}
-        - name: {{ $component.tls.certSecret }}
+        {{- if $component.tls.https.enabled }}
+        - name: {{ $component.tls.https.certSecret }}
           secret:
-            secretName: {{ $component.tls.certSecret }}
-        - name: {{ $component.tls.certKeySecret }}
+            secretName: {{ $component.tls.https.certSecret }}
+        - name: {{ $component.tls.https.certKeySecret }}
           secret:
-            secretName: {{ $component.tls.certKeySecret }}
+            secretName: {{ $component.tls.https.certKeySecret }}
+        {{ end }}
+        {{- if $component.tls.icaps.enabled }}
+        - name: {{ $component.tls.icaps.certSecret }}
+          secret:
+            secretName: {{ $component.tls.icaps.certSecret }}
+        - name: {{ $component.tls.icaps.certKeySecret }}
+          secret:
+            secretName: {{ $component.tls.icaps.certKeySecret }}
         {{ end }}
         {{- if $component.import_configuration.enabled }}
         - name: {{ $component.import_configuration.importConfigMap }}
           configMap:
             name: {{ $component.import_configuration.importConfigMap }}
         {{ end }}
-        {{- if $component.nginx_support.tls.enabled }}
-        - name: {{ $component.nginx_support.tls.nginxsCertSecret }}
+        {{- if $component.tls.nginxs.enabled }}
+        - name: {{ $component.tls.nginxs.certSecret }}
           secret:
-            secretName: {{ $component.nginx_support.tls.nginxsCertSecret }}
-        - name: {{ $component.nginx_support.tls.nginxsKeySecret }}
+            secretName: {{ $component.tls.nginxs.certSecret }}
+        - name: {{ $component.tls.nginxs.certKeySecret }}
           secret:
-            secretName: {{ $component.nginx_support.tls.nginxsKeySecret }}
+            secretName: {{ $component.tls.nginxs.certKeySecret }}
         {{ end }}
         {{- if $component.persistentDir }}
         {{- if eq $.Values.storage_provisioner "hostPath" }}
